[project]
name = "piovesullasiria"
version = "0.1.5"
description = "Tool to download weather and save it on DCS miz"
authors = [
    {name = "None"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9, <=3.12"
dependencies = [
    "python-metar (>=1.4.0,<2.0.0)",
    "pydcs (>=0.15.0,<0.16.0)",
    "requests (>=2.32.5,<3.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "luadata (>=1.0.5,<2.0.0)",
    "click (<8.2.1)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
bump2version = "^1.0.1"
ipython = "<9.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
